--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   ml_api:
     build: .
@@ -16,6 +14,12 @@ services:
       DB_USER: postgres
       DB_PASSWORD: postgres
       DB_NAME: lavie
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8512/" ]
+      interval: 30s      # Check every 30 seconds
+      timeout: 5s       # Fail if it takes longer than 5s
+      retries: 3         # Mark unhealthy after 3 failures
+      start_period: 15s  # Give the app 10s to start up before checking
 
 networks:
   lavie_database:
