--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - lavie_database
     env_file:
       - .envs/ml.env
+      - .envs/db.env
     environment:
       DB_HOST: lavie_postgres
       DB_USER: postgres
