--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,8 +3,8 @@ server {
     server_name pacs.pcss.pl;
 
     # Konfiguracja SSL
-    ssl_certificate /etc/nginx/certs/full_chain.pem; # Nazwa Twojego pliku certyfikatu
-    ssl_certificate_key /etc/nginx/certs/private.key; # Nazwa Twojego klucza prywatnego
+    ssl_certificate /etc/nginx/certs/cert.pem; # Nazwa Twojego pliku certyfikatu
+    ssl_certificate_key /etc/nginx/certs/privkey.pem; # Nazwa Twojego klucza prywatnego
 
     # Opcjonalne: Ustawienia bezpieczeństwa SSL
     ssl_protocols TLSv1.2 TLSv1.3;
