--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,6 +10,11 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
+    # Jeśli ktoś wejdzie po HTTP na port SSL, przekieruj go na HTTPS
+    error_page 497 301 =307 https://$host:$server_port$request_uri;
+
+    underscores_in_headers on;
+
     location / {
         # Przekierowanie do kontenera z API
         # Używamy nazwy kontenera 'measurement-api' jako hosta
